# journiv

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.dev.sqlite.yml  docker-compose.dev.yml  docker-compose.sqlite.yml  docker-compose.yml  env.template  kubernetes.yaml  mise.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docker-release-main.yml  e2e-smoke-test.yml  integration-tests.yml  lint.yml  unit-tests.yml  upgrade-tests.yml
alembic/versions/: 7c52fcc89c83_make_user_name_required.py  a1b2c3d4e5f6_add_provider_metadata_to_integration.py  aa9a7125186b_add_activities_moods_goals_moments.py
app/: __init__.py  main.py
app/api/: dependencies.py
app/cli/: __init__.py  cli.py  logging.py
app/core/: cache.py  celery_app.py  config.py  csp_config.py  database.py  db_utils.py  encryption.py  exceptions.py  http_client.py  instance.py  license_cache.py  logging_config.py  media_signing.py  oidc.py  rate_limiting.py  scoped_cache.py  security.py  signing.py  time_utils.py  version_check_cache.py
app/integrations/: immich.py  router.py  schemas.py  service.py  tasks.py
app/models/: __init__.py  activity.py  activity_group.py  analytics.py  base.py  entry.py  enums.py  export_job.py  external_identity.py  goal.py  goal_category.py  import_job.py  instance_detail.py  integration.py  journal.py  moment.py  mood.py  mood_group.py  prompt.py  tag.py  user.py  user_mood_preference.py
app/plus/: __init__.py  plus_client.py
app/schemas/: activity.py  activity_group.py  analytics.py  base.py  dto.py  entry.py  goal.py  goal_category.py  instance.py  license.py  location.py  media.py  moment.py  mood.py  mood_group.py  tag.py  tag_plus.py  user.py  weather.py
app/services/: activity_group_service.py  (+22 more)
scripts/: docker-entrypoint.sh  fresh_migration.sh  moods.json  test.sh
web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  version.json
(+81 files in other folders)
