[project]
name = "journiv"
version = "0.1.0-beta.17"
description = "Journiv - Private Journal"
readme = "README.md"
authors = [
    { name = "swalabtech" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "sqlmodel==0.0.31",
    "sqlalchemy==2.0.45",
    "alembic==1.17.2",
    "aiosqlite==0.22.1",
    "psycopg2-binary==2.9.11",
    "asyncpg==0.31.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==25.1.0",
    "python-multipart==0.0.21",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "slowapi==0.1.9",
    "Pillow==12.1.0",
    "python-magic==0.4.27",
    "aiofiles==25.1.0",
    "ffmpeg-python==0.2.0",
    "httpx==0.28.1",
    "PyNaCl==1.6.2",
    "authlib==1.6.6",
    "redis==7.1.0",
    "itsdangerous==2.2.0",
    "celery==5.6.1",
    "celery-redbeat==2.3.3",
    "email-validator==2.3.0",
    "python-dateutil==2.9.0.post0",
    "psutil==7.2.1",
    "typer==0.21.1",
    "rich==14.3.1",
    "gunicorn==23.0.0",
    "ijson>=3.4.0.post0,<4.0.0",
]


[tool.uv]
add-bounds = "major"

[dependency-groups]
dev = [
    "types-redis>=4.6.0",
    "fakeredis>=2.32,<3",
    "ruff>=0.14.14",
    "ty>=0.0.1a26",
    { include-group = "test" },
]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-httpx==0.36.0",
    "httpx==0.28.1",
    "requests==2.32.5",
    "psycopg2-binary==2.9.11",
    "argon2-cffi==25.1.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.rules]
unresolved-reference = "error"
possibly-unresolved-reference = "warn"
deprecated = "ignore"
